Fix the navbar to the top of the page.
Removes the scrollbar to nothing.

--- a/web/hep_evd.css
+++ b/web/hep_evd.css
@@ -14,6 +14,7 @@ div {
 }
 
 .navbar {
+  position: absolute;
   min-height: 2.1em;
   height: 2.1em;
 }
